--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -41,14 +41,14 @@
 .cb-slideshow:after {
 	position: fixed;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	top: 0px;
 	left: 0px;
 	z-index: 0;
 }
 .cb-slideshow li span {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -62,7 +62,7 @@
 }
 .cb-slideshow li span {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	position: absolute;
 	top: 0px;
 	left: 0px;
